src/objects/CSAT_File__c.object
<CustomObject>
    <description>This object houses attached Phone Survey CSV files from Convergy</description>
    <fields>
        <fullName>Data_Set_First_Date__c</fullName>
        <label>Dataset First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Set_Last_Date__c</fullName>
        <label>Dataset Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Table__c</fullName>
        <label>Error Table</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of the uploaded Phone Survey CSV file</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Uploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Errors__c</fullName>
        <description>This is the total number of error records created from a Phone Survey CSV file attachment</description>
        <inlineHelpText>This is the total number of error records created from a Phone Survey CSV file attachment</inlineHelpText>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>Staging_Record__c.Contains_Error__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Staging_Record__c.CSAT_File__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Record_Inserted__c</fullName>
        <description>This is the total number of records created from the upload CSV file</description>
        <inlineHelpText>This is the total number of records created from the upload CSV file</inlineHelpText>
        <label>Total Record Inserted</label>
        <summaryForeignKey>Staging_Record__c.CSAT_File__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CSAT File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Total_Record_Inserted__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSAT-{00000000}</displayFormat>
        <label>CSAT File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAT Files</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>This is a Record Type for CSAT File record for which attached CSV file has not been processed</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processed</fullName>
        <active>true</active>
        <description>This is for CSAT File records whose CSV file attachment has been processed</description>
        <label>Processed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>